--- a/packages/cx-image/package.json
+++ b/packages/cx-image/package.json
@@ -2,7 +2,7 @@
   "name": "@bodiless/cx-image",
   "sideEffects": false,
   "version": "1.0.0-beta.4",
-  "description": "Clean, designable Image components for CanvasX based projects",
+  "description": "Clean, designable Image components for Vital Design System based projects",
   "author": "Marco Pagliarulo <mpaglia1@its.jnj.com>",
   "license": "UNLICENSED",
   "main": "lib/index.js",
