--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bodiless/__cxstarter__",
+  "name": "--vital--",
   "sideEffects": false,
   "version": "1.0.0-beta.4",
   "description": "",
