--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -23,6 +23,8 @@
     "useDefineForClassFields": true,
     "baseUrl": "packages",
     "paths": {
+      "--vital--/": ["__vital__/src/"],
+      "--vital--/*": ["__vital__/src/*"],
       "@bodiless/accordion": ["bodiless-accordion/src"],
       "@bodiless/accordion/*": ["bodiless-accordion/src/*"],
       "@bodiless/bv": ["bodiless-bv/src"],
@@ -39,9 +41,7 @@
       "@bodiless/core-ui": ["bodiless-core-ui/src"],
       "@bodiless/core-ui/*": ["bodiless-core-ui/src/*"],
       "@bodiless/curator/": ["bodiless-curator/src/"],
-      "@bodiless/curator/*": ["bodiless-curator/src/*"],
-      "@bodiless/__cxstarter__": ["__cxstarter__/src/"],
-      "@bodiless/__cxstarter__/*": ["__cxstarter__/src/*"],      
+      "@bodiless/curator/*": ["bodiless-curator/src/*"], 
       "@bodiless/cx-editors": ["cx-editors/src/"],
       "@bodiless/cx-editors/*": ["cx-editors/src/*"],
       "@bodiless/cx-elements": ["cx-elements/src/"],
