--- a/packages/vital-image/package.json
+++ b/packages/vital-image/package.json
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://sourcecode.jnj.com/scm/asx-nbfp/canvasx.git"
+    "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "publishConfig": {
     "access": "public"
