--- a/sites/__vital__/package.json
+++ b/sites/__vital__/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sites/--vital--",
   "version": "1.0.0-beta.4",
-  "description": "Starter site for a canvasx-based Bodiless site",
+  "description": "Starter site for a Vital Design System Bodiless site",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
   "license": "Apache-2.0",
