--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -44,10 +44,10 @@ hooks:
         # export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/sitemap.xml
         # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js build
         # # ssi preparation
-        # export SSI_CONF_PATH=sites/__cxstarter__/ssi/ssi_conf.json
+        # export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
         # export DOCUMENT_ROOT=$PLATFORM_DOCUMENT_ROOT
         # export VOLUME_DIR=$APP_VOLUME
-        # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js build    
+        # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js build
     deploy: |
         echo '/.platform.app.yaml deploy()'
         echo Site name: $APP_SITE_NAME
@@ -70,7 +70,7 @@ hooks:
         # export PSH_URL_REPLACER_PROD_ENV=$APP_PROD_ENV
         # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js deploy
         # # ssi files generation
-        # export SSI_CONF_PATH=sites/__cxstarter__/ssi/ssi_conf.json
+        # export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
         # export VOLUME_DIR=$APP_VOLUME
         # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js deploy
 
