--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -29,50 +29,49 @@ hooks:
     build: |
         echo '/.platform.app.yaml build()'
         echo Site name: $APP_SITE_NAME
-        # set -e
-        # npm run bootstrap
-        # npm run build:packages
-        # npm run build -- --scope @sites/$APP_SITE_NAME
-        # #robots.txt preparation
-        # export PSH_URL_REPLACER_SRC_FILE=$PLATFORM_DOCUMENT_ROOT/robots.txt
-        # export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/robots_pshtmp.txt
-        # export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/robots.txt
-        # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js build
-        # #sitemap.xml preparation
-        # export PSH_URL_REPLACER_SRC_FILE=$PLATFORM_DOCUMENT_ROOT/sitemap.xml
-        # export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/sitemap_pshtmp.xml
-        # export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/sitemap.xml
-        # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js build
-        # # ssi preparation
-        # export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
-        # export DOCUMENT_ROOT=$PLATFORM_DOCUMENT_ROOT
-        # export VOLUME_DIR=$APP_VOLUME
-        # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js build
+        set -e
+        npm run bootstrap
+        npm run build:packages
+        npm run build -- --scope @sites/$APP_SITE_NAME
+        #robots.txt preparation
+        export PSH_URL_REPLACER_SRC_FILE=$PLATFORM_DOCUMENT_ROOT/robots.txt
+        export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/robots_pshtmp.txt
+        export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/robots.txt
+        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js build
+        #sitemap.xml preparation
+        export PSH_URL_REPLACER_SRC_FILE=$PLATFORM_DOCUMENT_ROOT/sitemap.xml
+        export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/sitemap_pshtmp.xml
+        export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/sitemap.xml
+        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js build
+        # ssi preparation
+        export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
+        export DOCUMENT_ROOT=$PLATFORM_DOCUMENT_ROOT
+        export VOLUME_DIR=$APP_VOLUME
+        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js build
     deploy: |
         echo '/.platform.app.yaml deploy()'
         echo Site name: $APP_SITE_NAME
         #processing site url
         APP_SITE_URL=$(echo $APP_SITE_URL | sed -e "s/\${PLATFORM_ENVIRONMENT}/$PLATFORM_ENVIRONMENT/g")
         APP_SITE_URL=$(echo $APP_SITE_URL | sed -e "s/\${PLATFORM_PROJECT}/$PLATFORM_PROJECT/g")
-        echo APP_SITE_URL: $APP_SITE_URL
-        # #processing robots.txt
-        # export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/robots_pshtmp.txt
-        # export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/robots.txt
-        # export PSH_URL_REPLACER_SRC_URL=$APP_PROD_URL
-        # export PSH_URL_REPLACER_TARGET_URL=$APP_SITE_URL
-        # export PSH_URL_REPLACER_PROD_ENV=$APP_PROD_ENV
-        # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js deploy
-        # #processing sitemap.xml
-        # export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/sitemap_pshtmp.xml
-        # export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/sitemap.xml
-        # export PSH_URL_REPLACER_SRC_URL=$APP_PROD_URL
-        # export PSH_URL_REPLACER_TARGET_URL=$APP_SITE_URL
-        # export PSH_URL_REPLACER_PROD_ENV=$APP_PROD_ENV
-        # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js deploy
-        # # ssi files generation
-        # export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
-        # export VOLUME_DIR=$APP_VOLUME
-        # node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js deploy
+        #processing robots.txt
+        export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/robots_pshtmp.txt
+        export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/robots.txt
+        export PSH_URL_REPLACER_SRC_URL=$APP_PROD_URL
+        export PSH_URL_REPLACER_TARGET_URL=$APP_SITE_URL
+        export PSH_URL_REPLACER_PROD_ENV=$APP_PROD_ENV
+        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js deploy
+        #processing sitemap.xml
+        export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/sitemap_pshtmp.xml
+        export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/sitemap.xml
+        export PSH_URL_REPLACER_SRC_URL=$APP_PROD_URL
+        export PSH_URL_REPLACER_TARGET_URL=$APP_SITE_URL
+        export PSH_URL_REPLACER_PROD_ENV=$APP_PROD_ENV
+        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js deploy
+        # ssi files generation
+        export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
+        export VOLUME_DIR=$APP_VOLUME
+        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js deploy
 
 # The size of the persistent disk of the application (in MB).
 disk: 320
