--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -87,14 +87,14 @@ web:
     locations:
         '/':
             # The public directory of the application relative to its root.
-            root: sites/__cxstarter__/public
+            root: "sites/{{ APP_SITE_NAME }}/public"
             index: ['index.html']
             scripts: false
             allow: true
             passthru: false
             expires: 6h
         '/___docs':
-            root: sites/__cxstarter__/doc
+            root: "sites/{{ APP_SITE_NAME }}/doc"
             index: ['index.html']
             scripts: false
             allow: true
