--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -87,14 +87,14 @@ web:
     locations:
         '/':
             # The public directory of the application relative to its root.
-            root: $(echo sites/$APP_SITE_NAME/public)
+            root: 'sites/__cxstarter__/public'
             index: ['index.html']
             scripts: false
             allow: true
             passthru: false
             expires: 6h
         '/___docs':
-            root: $(echo sites/$APP_SITE_NAME/doc)
+            root: 'sites/__cxstarter__/doc'
             index: ['index.html']
             scripts: false
             allow: true
