--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -88,14 +88,14 @@ web:
     locations:
         '/':
             # The public directory of the application relative to its root.
-            root: 'sites/__cxstarter__/public'
+            root: 'sites/--vital--/public'
             index: ['index.html']
             scripts: false
             allow: true
             passthru: false
             expires: 6h
         '/___docs':
-            root: 'sites/__cxstarter__/doc'
+            root: 'sites/--vital--/doc'
             index: ['index.html']
             scripts: false
             allow: true
