--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,107 +1,49 @@
-###
- # Copyright © 2019 Johnson & Johnson
- #
- # Licensed under the Apache License, Version 2.0 (the "License");
- # you may not use this file except in compliance with the License.
- # You may obtain a copy of the License at
- # http:##www.apache.org#licenses#LICENSE-2.0
- # Unless required by applicable law or agreed to in writing, software
- # distributed under the License is distributed on an "AS IS" BASIS,
- # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- # See the License for the specific language governing permissions and
- # limitations under the License.
- ##
-
-# .platform.app.yaml
-
-# The name of this application, which must be unique within a project.
-name: 'static'
-
-# The type key specifies the language and version for your application.
+name: static
 type: 'nodejs:16'
-
 build:
-    flavor: none
-
-# The hooks that will be triggered when the package is deployed.
+  flavor: none
 hooks:
-    # Build hooks can modify the application files on disk but not access any services like databases.
-    build: |
-        echo '/.platform.app.yaml build()'
-        echo Site name: $APP_SITE_NAME
-        set -e
-        export NODE_OPTIONS="--max-old-space-size=2048"
-        npm run bootstrap
-        npm run build:packages
-        npm run build -- --scope @sites/$APP_SITE_NAME
-        #robots.txt preparation
-        export PSH_URL_REPLACER_SRC_FILE=$PLATFORM_DOCUMENT_ROOT/robots.txt
-        export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/robots_pshtmp.txt
-        export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/robots.txt
-        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js build
-        #sitemap.xml preparation
-        export PSH_URL_REPLACER_SRC_FILE=$PLATFORM_DOCUMENT_ROOT/sitemap.xml
-        export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/sitemap_pshtmp.xml
-        export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/sitemap.xml
-        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js build
-        # ssi preparation
-        export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
-        export DOCUMENT_ROOT=$PLATFORM_DOCUMENT_ROOT
-        export VOLUME_DIR=$APP_VOLUME
-        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js build
-    deploy: |
-        echo '/.platform.app.yaml deploy()'
-        echo Site name: $APP_SITE_NAME
-        #processing site url
-        APP_SITE_URL=$(echo $APP_SITE_URL | sed -e "s/\${PLATFORM_ENVIRONMENT}/$PLATFORM_ENVIRONMENT/g")
-        APP_SITE_URL=$(echo $APP_SITE_URL | sed -e "s/\${PLATFORM_PROJECT}/$PLATFORM_PROJECT/g")
-        #processing robots.txt
-        export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/robots_pshtmp.txt
-        export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/robots.txt
-        export PSH_URL_REPLACER_SRC_URL=$APP_PROD_URL
-        export PSH_URL_REPLACER_TARGET_URL=$APP_SITE_URL
-        export PSH_URL_REPLACER_PROD_ENV=$APP_PROD_ENV
-        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js deploy
-        #processing sitemap.xml
-        export PSH_URL_REPLACER_TMP_FILE=$PLATFORM_DOCUMENT_ROOT/../static/sitemap_pshtmp.xml
-        export PSH_URL_REPLACER_TARGET_FILE=$APP_VOLUME/sitemap.xml
-        export PSH_URL_REPLACER_SRC_URL=$APP_PROD_URL
-        export PSH_URL_REPLACER_TARGET_URL=$APP_SITE_URL
-        export PSH_URL_REPLACER_PROD_ENV=$APP_PROD_ENV
-        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/psh-url-replacer.js deploy
-        # ssi files generation
-        export SSI_CONF_PATH=sites/$APP_SITE_NAME/ssi/ssi_conf.json
-        export VOLUME_DIR=$APP_VOLUME
-        node $PLATFORM_APP_DIR/packages/bodiless-psh/lib/generate-ssi-files.js deploy
-
-# The size of the persistent disk of the application (in MB).
-disk: 1024
-
+  build: bash ./static.platform.sh build
+  deploy: bash ./static.platform.sh deploy
+  post_deploy: bash ./static.platform.sh post_deploy
+disk: 320
 mounts:
-    'volume':
-        source: local
-        source_path: volume
-
-
-# The configuration of the application when it is exposed to the web.
+  volume:
+    source: local
+    source_path: volume
 web:
-    locations:
-        '/':
-            # The public directory of the application relative to its root.
-            root: 'sites/--vital--/public'
-            index: ['index.html']
-            scripts: false
-            allow: true
-            passthru: false
-            expires: 6h
-        '/___docs':
-            root: 'sites/--vital--/doc'
-            index: ['index.html']
-            scripts: false
-            allow: true
-            expires: 6h
-
+  # This is to start the node server to intercept all undefined route requests
+  commands:
+    start: node sites/canvasx-demo/404.js
+  locations:
+    /:
+      root: public
+      index:
+        - index.html
+      scripts: false
+      allow: true
+      expires: 6h
+      headers:
+        X-Frame-Options: SAMEORIGIN
+        x-content-type-options: nosniff
+        # content-security-policy: set in meta see gatsby-config.js
+        X-XSS-Protection: 1; mode=block
+        Referrer-Policy: strict-origin-when-cross-origin
+        Permissions-Policy: geolocation=(), midi=(), sync-xhr=(), microphone=(), camera=(), magnetometer=(), gyroscope=(), fullscreen=(), payment=()
+      passthru: true
+      rules:
+        \.(css|js|gif|jpe?g|png|ttf|webp|eot|woff2?|otf|cast|mp4|yaml|ico|svg?)$:
+          expires: 4w
+    # This is to invalidate route 404 so we can return a 404 status on it
+    /404:
+      root: sites/canvasx-demo/public
+      index:
+        - index.html
+      allow: false
+      passthru: true
+    /___docs:
+      expires: 6h
 variables:
-    env:
-        APP_VOLUME: '/app/volume'
-        CHOKIDAR_USEPOLLING: true
+  env:
+    APP_VOLUME: /app/volume
+    APP_SITE_NAME: canvasx-demo
