--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "sites:clone-local": "node ./scripts/sites-clone",
     "sites:install": "node ./scripts/sites-install",
     "sites:update": "npm run sites:pack && npm run sites:install",
-    "sites:launch-test": "npm run sites:clone-local ${APP_SITE_NAME:-test-site} && npm run sites:update ${APP_SITE_NAME:-test-site} && cd sites/${APP_SITE_NAME:-test-site} && npm install --legacy-peer-deps && npm run start",
-    "sites:launch-monorepo": "cd sites/${APP_SITE_NAME:-test-site} && npm run start",
+    "sites:launch-test": "npm run sites:clone-local ${APP_SITE_DIR_NAME:-test-site} && npm run sites:update ${APP_SITE_DIR_NAME:-test-site} && cd sites/${APP_SITE_DIR_NAME:-test-site} && npm install --legacy-peer-deps && npm run start",
+    "sites:launch-monorepo": "cd sites/${APP_SITE_DIR_NAME:-test-site} && npm run start",
     "start": "lerna run start --stream --scope @sites/${APP_SITE_NAME:-test-site}",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
