--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,46 +1,62 @@
-name: static
+###
+ # Copyright © 2019 Johnson & Johnson
+ #
+ # Licensed under the Apache License, Version 2.0 (the "License");
+ # you may not use this file except in compliance with the License.
+ # You may obtain a copy of the License at
+ # http:##www.apache.org#licenses#LICENSE-2.0
+ # Unless required by applicable law or agreed to in writing, software
+ # distributed under the License is distributed on an "AS IS" BASIS,
+ # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ # See the License for the specific language governing permissions and
+ # limitations under the License.
+ ##
+
+# .platform.app.yaml
+
+# The name of this application, which must be unique within a project.
+name: 'static'
+
+# The type key specifies the language and version for your application.
 type: 'nodejs:16'
+
 build:
-  flavor: none
+    flavor: none
+
+# The hooks that will be triggered when the package is deployed.
 hooks:
   build: bash ./static.platform.sh build
   deploy: bash ./static.platform.sh deploy
   post_deploy: bash ./static.platform.sh post_deploy
+
+# The size of the persistent disk of the application (in MB).
 disk: 1024
+
 mounts:
-  volume:
-    source: local
-    source_path: volume
+    'volume':
+        source: local
+        source_path: volume
+
+
+# The configuration of the application when it is exposed to the web.
 web:
-  locations:
-    /:
-      root: public
-      index:
-        - index.html
-      scripts: false
-      allow: true
-      expires: 6h
-      headers:
-        X-Frame-Options: SAMEORIGIN
-        x-content-type-options: nosniff
-        # content-security-policy: set in meta see gatsby-config.js
-        X-XSS-Protection: 1; mode=block
-        Referrer-Policy: strict-origin-when-cross-origin
-        Permissions-Policy: geolocation=(), midi=(), sync-xhr=(), microphone=(), camera=(), magnetometer=(), gyroscope=(), fullscreen=(), payment=()
-      passthru: true
-      rules:
-        \.(css|js|gif|jpe?g|png|ttf|webp|eot|woff2?|otf|cast|mp4|yaml|ico|svg?)$:
-          expires: 4w
-    # This is to invalidate route 404 so we can return a 404 status on it
-    /404:
-      root: public
-      index:
-        - index.html
-      allow: false
-      passthru: true
-    /___docs:
-      expires: 6h
+    locations:
+        '/':
+            # The public directory of the application relative to its root.
+            root: 'sites/test-site/public'
+            index: ['index.html']
+            scripts: false
+            allow: true
+            passthru: false
+            expires: 6h
+        '/___docs':
+            root: 'sites/test-site/doc'
+            index: ['index.html']
+            scripts: false
+            allow: true
+            expires: 6h
+
 variables:
-  env:
-    APP_VOLUME: /app/volume
-    APP_SITE_NAME: test-site
+    env:
+        APP_VOLUME: '/app/volume'
+        CHOKIDAR_USEPOLLING: true
