--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -30,7 +30,7 @@ hooks:
   post_deploy: bash ./static.platform.sh post_deploy
 
 # The size of the persistent disk of the application (in MB).
-disk: 2048
+disk: 1024
 
 mounts:
     'volume':
@@ -43,14 +43,14 @@ web:
     locations:
         '/':
             # The public directory of the application relative to its root.
-            root: 'sites/test-site/public'
+            root: 'sites/__vital__/public'
             index: ['index.html']
             scripts: false
             allow: true
             passthru: false
             expires: 6h
         '/___docs':
-            root: 'sites/test-site/doc'
+            root: 'sites/__vital__/doc'
             index: ['index.html']
             scripts: false
             allow: true
