--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -43,17 +43,11 @@ web:
     locations:
         '/':
             # The public directory of the application relative to its root.
-            root: 'sites/__vital__/public'
+            root: 'public'
             index: ['index.html']
             scripts: false
             allow: true
             passthru: false
-            expires: 6h
-        '/___docs':
-            root: 'sites/__vital__/doc'
-            index: ['index.html']
-            scripts: false
-            allow: true
             expires: 6h
 
 variables:
