--- a/packages/bodiless-ga4/package.json
+++ b/packages/bodiless-ga4/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@bodiless/gtm",
+  "name": "@bodiless/ga4",
   "version": "1.0.0-beta.9",
-  "description": "Provides integration to support DataLayer in GTM",
+  "description": "Provides integration to support DataLayer in Google Analytics",
   "author": "Heidi Vanyo <hvanyo@its.jnj.com>",
   "license": "Apache-2.0",
   "main": "lib/index.js",
@@ -30,6 +30,10 @@
   "dependencies": {
     "@bodiless/cli": "^1.0.0-beta.9",
     "@bodiless/components": "^1.0.0-beta.9",
+    "@bodiless/fclasses": "^1.0.0-beta.9",
+    "@bodiless/filtering": "^1.0.0-beta.9",
+    "@bodiless/layouts": "^1.0.0-beta.9",
+    "@bodiless/search": "^1.0.0-beta.9",
     "@bodiless/core": "^1.0.0-beta.9",
     "common-tags": "^1.8.0",
     "lodash": "^4.17.19"
