--- a/.eslintignore
+++ b/.eslintignore
@@ -6,6 +6,7 @@ packages/gatsby-theme-bodiless/index.d.ts
 packages/bodiless-migration-tool/conf
 packages/bodiless-migration-tool/tests/data
 packages/bodiless-migration-tool/tests/testserver
+packages/gatsby-theme-akamai-auth/dist
 **/public
 **/.cache
 **/static
