--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -38,6 +38,7 @@
     "@bodiless/components": "^1.0.0-beta.10",
     "@bodiless/core": "^1.0.0-beta.10",
     "@bodiless/fclasses": "^1.0.0-beta.10",
+    "@bodiless/ga4": "^1.0.0-beta.10",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.10",
     "@bodiless/vital-editors": "^1.0.0-beta.10",
     "@bodiless/vital-elements": "^1.0.0-beta.10",
