--- a/.eslintignore
+++ b/.eslintignore
@@ -6,7 +6,8 @@ packages/gatsby-theme-bodiless/index.d.ts
 packages/bodiless-migration-tool/conf
 packages/bodiless-migration-tool/tests/data
 packages/bodiless-migration-tool/tests/testserver
-packages/gatsby-theme-akamai-auth/dist
+packages/gatsby-plugin-akamai-auth/dist
+packages/gatsby-plugin-akamai-auth/index.js
 **/public
 **/.cache
 **/static
