--- a/sites/__vital__/package.json
+++ b/sites/__vital__/package.json
@@ -30,6 +30,7 @@
     "@bodiless/vital-link": "^1.0.0-beta.11",
     "@bodiless/vital-list": "^1.0.0-beta.11",
     "@bodiless/vital-navigation": "^1.0.0-beta.11",
+    "@bodiless/vital-table": "^1.0.0-beta.11",
     "@bodiless/vital-templates": "^1.0.0-beta.11",
     "@bodiless/webpack": "^1.0.0-beta.11",
     "autoprefixer": "^10.4.2",
