--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -48,6 +48,7 @@
     "@bodiless/vital-list": "^1.0.0-beta.11",
     "@bodiless/vital-table": "^1.0.0-beta.11",
     "@bodiless/vital-templates": "^1.0.0-beta.11",
+    "@bodiless/i18n": "^1.0.0-beta.11",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
