--- a/packages/bodiless-i18n/package.json
+++ b/packages/bodiless-i18n/package.json
@@ -8,7 +8,8 @@
   "typings": "lib/index.d.ts",
   "files": [
     "/lib",
-    "/bodiless.docs.json"
+    "/bodiless.docs.json",
+    "/getDocs.js"
   ],
   "repository": {
     "type": "git",
