--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -44,6 +44,7 @@
     "@bodiless/vital-flowcontainer": "^1.0.0-beta.15",
     "@bodiless/vital-image": "^1.0.0-beta.15",
     "@bodiless/vital-layout": "^1.0.0-beta.15",
+    "@bodiless/vital-navigation": "^1.0.0-beta.15",
     "lodash": "^4.17.19"
   }
 }
