--- a/packages/vital-buttons/package.json
+++ b/packages/vital-buttons/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "--vital--",
+  "name": "@bodiless/vital-buttons",
   "sideEffects": false,
   "version": "1.0.0-beta.15",
-  "description": "Starter template for a Design System package based on Vital DS",
-  "author": "Chris Oden <coden@its.jnj.com>",
+  "description": "",
+  "author": "Heidi Vanyo <hvanyo@its.jnj.com>",
   "license": "Apache-2.0",
-  "private": true,
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -14,18 +13,20 @@
     "/getDocs.js",
     "/tailwind.config.js",
     "/doc",
-    "./shadow.js"
+    "/assets"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "npm run build:lib && npm run build:api-doc",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
     "build:api-doc": "typedoc --out doc/api ./src",
-    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx ./src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo"
   },
   "peerDependencies": {
@@ -37,18 +38,10 @@
     "@bodiless/components-ui": "^1.0.0-beta.15",
     "@bodiless/core": "^1.0.0-beta.15",
     "@bodiless/fclasses": "^1.0.0-beta.15",
-    "@bodiless/richtext": "^1.0.0-beta.15",
-    "@bodiless/richtext-ui": "^1.0.0-beta.15",
-    "@bodiless/vital-buttons": "^1.0.0-beta.15",
-    "@bodiless/vital-editors": "^1.0.0-beta.15",
+    "@bodiless/hydration": "^1.0.0-beta.15",
     "@bodiless/vital-elements": "^1.0.0-beta.15",
-    "@bodiless/vital-flowcontainer": "^1.0.0-beta.15",
-    "@bodiless/vital-image": "^1.0.0-beta.15",
-    "@bodiless/vital-layout": "^1.0.0-beta.15",
+    "@bodiless/vital-editors": "^1.0.0-beta.15",
     "@bodiless/vital-link": "^1.0.0-beta.15",
-    "@bodiless/vital-list": "^1.0.0-beta.15",
-    "@bodiless/vital-table": "^1.0.0-beta.15",
-    "@bodiless/vital-templates": "^1.0.0-beta.15",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
