--- a/packages/vital-navigation/package.json
+++ b/packages/vital-navigation/package.json
@@ -37,7 +37,7 @@
     "@bodiless/navigation": "^1.0.0-beta.15",
     "@bodiless/vital-editors": "^1.0.0-beta.15",
     "@bodiless/vital-elements": "^1.0.0-beta.15",
-    "@bodiless/vital-buttons": "^1.0.0-beta.15",
+    "@bodiless/vital-link": "^1.0.0-beta.15",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
