--- a/sites/__vital__/package.json
+++ b/sites/__vital__/package.json
@@ -22,6 +22,7 @@
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.18",
     "@bodiless/search": "^1.0.0-beta.18",
     "@bodiless/ui": "^1.0.0-beta.18",
+    "@bodiless/vital-buttons": "^1.0.0-beta.18",    
     "@bodiless/vital-editors": "^1.0.0-beta.18",
     "@bodiless/vital-elements": "^1.0.0-beta.18",
     "@bodiless/vital-flowcontainer": "^1.0.0-beta.18",
