--- a/.github/workflows/attach-test-results.yml
+++ b/.github/workflows/attach-test-results.yml
@@ -33,6 +33,7 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
           commit: ${{ github.event.workflow_run.head_sha }}
+          check_name: 'Playwright Test Results'
           event_file: artifacts/Event File/event.json
           event_name: ${{ github.event.workflow_run.event }}
           files: "artifacts/**/*.xml"
