ci: annotations improvement

--- a/.github/workflows/pr-canary-release.yml
+++ b/.github/workflows/pr-canary-release.yml
@@ -14,7 +14,7 @@ on:
       - main
 jobs:
   pr-canary-release:
-    if: ${{ contains(github.event.pull_request.title, 'canary') }}
+    if: ${{ contains(github.event.pull_request.title, '[canary]') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
