--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   prerelease:
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.head_commit.message, 'no-release') }}
+    if: ${{ !contains(github.event.head_commit.message, '[no-release]') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
