add cjs to lintignore

--- a/.eslintignore
+++ b/.eslintignore
@@ -8,6 +8,7 @@ packages/bodiless-migration-tool/conf
 packages/bodiless-migration-tool/tests/data
 packages/bodiless-migration-tool/tests/testserver
 packages/gatsby-plugin-akamai-auth/dist
+packages/gatsby-plugin-akamai-auth/cjs
 packages/gatsby-plugin-akamai-auth/index.js
 **/public
 **/.cache
