--- a/packages/vital-card-core/package.json
+++ b/packages/vital-card-core/package.json
@@ -34,6 +34,8 @@
     "@bodiless/cli": "^1.0.0-rc.12",
     "@bodiless/fclasses": "^1.0.0-rc.12",
     "@bodiless/vital-elements": "^1.0.0-rc.12",
+    "@bodiless/vital-buttons-core": "^1.0.0-rc.12",
+    "@bodiless/vital-link-core": "^1.0.0-rc.12",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23",
     "uuid": "^3.3.2"
