--- a/packages/vital-link/package.json
+++ b/packages/vital-link/package.json
@@ -42,6 +42,7 @@
     "@bodiless/richtext": "^1.0.0-rc.12",
     "@bodiless/richtext-ui": "^1.0.0-rc.12",
     "@bodiless/vital-elements": "^1.0.0-rc.12",
+    "@bodiless/vital-link-core": "^1.0.0-rc.12",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
