update external source tokens

--- a/sites/gatsby-vanilla/package.json
+++ b/sites/gatsby-vanilla/package.json
@@ -6,7 +6,9 @@
   "author": "Heidi Vanyo <hvanyo@its.jnj.com>",
   "dependencies": {
     "@bodiless/fclasses": "^1.0.0-rc.13",
+    "@bodiless/vital-buttons-core": "^1.0.0-rc.13",
     "@bodiless/vital-card-core": "^1.0.0-rc.13",
+    "@bodiless/vital-link-core": "^1.0.0-rc.13",
     "@bodiless/vital-elements": "^1.0.0-rc.13",
     "autoprefixer": "^10.4.2",
     "esm": "^3.2.25", 
