--- a/packages/vital-navigation-core/package.json
+++ b/packages/vital-navigation-core/package.json
@@ -31,14 +31,11 @@
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.16",
     "@bodiless/components": "^1.0.0-rc.16",
-    "@bodiless/components-ui": "^1.0.0-rc.16",
     "@bodiless/core": "^1.0.0-rc.16",
     "@bodiless/fclasses": "^1.0.0-rc.16",
-    "@bodiless/navigation": "^1.0.0-rc.16",
-    "@bodiless/vital-buttons": "^1.0.0-rc.16",
-    "@bodiless/vital-editors": "^1.0.0-rc.16",
+    "@bodiless/vital-buttons-core": "^1.0.0-rc.16",
     "@bodiless/vital-elements": "^1.0.0-rc.16",
-    "@bodiless/vital-link": "^1.0.0-rc.16",
+    "@bodiless/vital-link-core": "^1.0.0-rc.16",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
