--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -25,15 +25,19 @@
     "@bodiless/layouts-ui": "^1.0.0-rc.17",
     "@bodiless/schema-org": "^1.0.0-rc.17",
     "@bodiless/ui": "^1.0.0-rc.17",
+    "@bodiless/vital-buttons-core": "^1.0.0-rc.17",
     "@bodiless/vital-buttons": "^1.0.0-rc.17",
+    "@bodiless/vital-card-core": "^1.0.0-rc.17",
     "@bodiless/vital-card": "^1.0.0-rc.17",
     "@bodiless/vital-editors": "^1.0.0-rc.17",
     "@bodiless/vital-elements": "^1.0.0-rc.17",
     "@bodiless/vital-flowcontainer": "^1.0.0-rc.17",
     "@bodiless/vital-image": "^1.0.0-rc.17",
     "@bodiless/vital-layout": "^1.0.0-rc.17",
+    "@bodiless/vital-link-core": "^1.0.0-rc.17",
     "@bodiless/vital-link": "^1.0.0-rc.17",
     "@bodiless/vital-list": "^1.0.0-rc.17",
+    "@bodiless/vital-navigation-core": "^1.0.0-rc.17",
     "@bodiless/vital-navigation": "^1.0.0-rc.17",
     "@bodiless/vital-search": "^1.0.0-rc.17",
     "@bodiless/vital-templates": "^1.0.0-rc.17",
