--- a/package.json
+++ b/package.json
@@ -81,13 +81,14 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-transform-modules-commonjs": "7.5.0",
     "@babel/runtime": "^7.4.2",
+    "@nrwl/nx-cloud": "^15.0.0",
     "@playwright/test": "1.22",
     "@types/enzyme": "^3.9.1",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.158",
     "@types/rc-tooltip": "^3.7.1",
-    "@types/react-dom": "^17.0.2",
     "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.2",
     "@types/slate": "^0.47.9",
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -120,7 +121,7 @@
     "jest-haste-map": "^24.5.0",
     "jest-resolve": "^24.5.0",
     "jest-sonar-reporter": "^2.0.0",
-    "lerna": "^5.0.0",
+    "lerna": "^5.6.2",
     "npm-run-all": "^4.1.5",
     "ora": "^4.0.2",
     "react-test-renderer": "^17.0.2",
