Fix tailwind type import

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "bootstrap": "npm run clean:symlinks && npx lerna@^5.0.0 bootstrap --hoist --strict",
-    "bootstrap:gatsby-cloud": "npm i && npx lerna@^5.0.0 bootstrap",
-    "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
+    "bootstrap": "npm run clean:symlinks && npx lerna bootstrap --hoist --strict",
+    "bootstrap:gatsby-cloud": "npm i && npx lerna bootstrap",
+    "build": "cross-env NODE_ENV=production nx run-many --target=build --stream --exclude=@bodiless/gatsby-starter-bodiless",
     "nxbuild": "npx nx run-many --target=build",
     "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
-    "build:packages": "cross-env NODE_ENV=production lerna run build --stream --ignore @sites/*",
+    "build:packages": "cross-env NODE_ENV=production nx run-many --exclude=@sites/*",
     "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
     "build:env-vars": "cross-env NODE_ENV=production lerna run build:env-vars --stream",
     "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
