--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "bootstrap": "npm run clean:symlinks && npx lerna@^5.0.0 bootstrap --hoist --strict",
-    "bootstrap:gatsby-cloud": "npm i && npx lerna@^5.0.0 bootstrap",
-    "build": "cross-env NODE_ENV=production lerna run build --stream --ignore @bodiless/gatsby-starter-bodiless",
-    "build:only": "cross-env NODE_ENV=production lerna run build --stream --scope",
-    "build:packages": "cross-env NODE_ENV=production lerna run build --stream --ignore @sites/*",
-    "build:watch": "cross-env NODE_ENV=development lerna run build:watch --parallel",
-    "build:env-vars": "cross-env NODE_ENV=production lerna run build:env-vars --stream",
-    "build:tailwind-configs": "cross-env NODE_ENV=production lerna run build:tailwind-configs --stream",
-    "build:docs": "cross-env NODE_ENV=production lerna run build:docs --stream",
-    "build:api-doc": "cross-env NODE_ENV=production lerna run build:api-doc --stream",
-    "check": "cross-env NODE_ENV=production lerna run check --stream",
-    "clean": "lerna run clean && rimraf .eslintcache sites/*/.env.development sites/*/.env.production",
+    "bootstrap": "pnpm run clean:symlinks && pnpm install --shamefully-hoist",
+    "bootstrap:gatsby-cloud": "pnpm i && npx lerna bootstrap",
+    "build": "cross-env NODE_ENV=production pnpm run -r build",
+    "build:only": "cross-env NODE_ENV=production pnpm run -r build",
+    "build:packages": "cross-env NODE_ENV=production pnpm run -r build",
+    "build:watch": "cross-env NODE_ENV=development pnpm run -r build:watch --parallel",
+    "build:env-vars": "cross-env NODE_ENV=production pnpm run -r build:env-vars --stream",
+    "build:tailwind-configs": "cross-env NODE_ENV=production pnpm run -r build:tailwind-configs --stream",
+    "build:docs": "cross-env NODE_ENV=production pnpm run -r build:docs --stream",
+    "build:api-doc": "cross-env NODE_ENV=production pnpm run -r build:api-doc --stream",
+    "check": "cross-env NODE_ENV=production pnpm run check --stream",
+    "clean": "pnpm run clean && rimraf .eslintcache sites/*/.env.development sites/*/.env.production",
     "clean:symlinks": "node ./scripts/remove-site-symlinks @bodiless",
     "cy:run": "cypress run --browser chrome --record --key 0dcfb624-e152-453a-9375-aa710adb57ab",
     "cy:open": "cypress open",
@@ -26,31 +26,26 @@
     "copyright": "node ./scripts/add-copyright",
     "fix": "eslint --fix  --cache --ext .js,.jsx,.ts,.tsx packages sites",
     "fix:target": "eslint --fix  --cache --ext .js,.jsx,.ts,.tsx",
-    "fix:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run fix:target",
-    "fresh": "npm run clean && lerna clean -y && rimraf node_modules && npm run setup",
+    "fix:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 pnpm run fix:target",
+    "fresh": "pnpm run clean && pnpm clean -y && rimraf node_modules && pnpm run setup",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx packages sites --",
     "lint:target": "eslint --cache --ext .js,.jsx,.ts,.tsx",
-    "lint:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run lint:target",
+    "lint:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 pnpm run lint:target",
     "new": "node ./scripts/new-starter",
-    "publish:all": "npm run build && lerna publish --registry $NPM_REGISTRY",
-    "publish:from-package": "npm run build && lerna publish from-package --registry $NPM_REGISTRY",
+    "publish:all": "pnpm run build && lerna publish --registry $NPM_REGISTRY",
+    "publish:from-package": "pnpm run build && lerna publish from-package --registry $NPM_REGISTRY",
     "publish:patch": "lerna version patch --conventional-commits --force-publish",
     "publish:minor": "lerna version minor --conventional-commits",
     "publish:major": "lerna version major --conventional-commits",
     "lerna:publish": "lerna publish from-git --yes --dist-tag latest",
     "lerna:canary": "lerna publish --canary --include-merged-tags --preid ks-canary --dist-tag ks-canary --force-publish",
+    "preinstall": "npx only-allow pnpm",
     "pw:run": "npx playwright test playwright/tests/smoke/* --project=chromium --workers 1",
     "psh:setup-starter": "node ./scripts/psh-setup-starter",
-    "serve": "lerna run serve --scope @sites/${APP_SITE_NAME:-test-site} --stream",
-    "setup": "npm run bootstrap && npm run build:packages",
-    "setup:gatsby-cloud": "npm run bootstrap:gatsby-cloud && npm run build:packages",
-    "sites:pack": "lerna exec --no-private --stream -- npm pack",
-    "sites:clone-local": "node ./scripts/sites-clone",
-    "sites:install": "node ./scripts/sites-install",
-    "sites:update": "npm run sites:pack && npm run sites:install",
-    "sites:launch-test": "npm run sites:clone-local ${APP_SITE_DIR_NAME:-test-site} && npm run sites:update ${APP_SITE_DIR_NAME:-test-site} && cd sites/${APP_SITE_DIR_NAME:-test-site} && npm install --legacy-peer-deps && npm run start",
-    "sites:launch-monorepo": "cd sites/${APP_SITE_DIR_NAME:-test-site} && npm run start",
-    "start": "lerna run start --stream --scope @sites/${APP_SITE_NAME:-test-site}",
+    "serve": "pnpm run serve --scope @sites/${APP_SITE_NAME:-test-site} --stream",
+    "setup": "pnpm run bootstrap && pnpm run build:packages",
+    "setup:gatsby-cloud": "npm run bootstrap:gatsby-cloud && pnpm run build:packages",
+    "start": "pnpm run start --stream --scope @sites/${APP_SITE_NAME:-test-site}",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
     "test": "jest",
@@ -61,7 +56,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run sync:check && npm run lint && npm run check"
+      "pre-push": "pnpm run sync:check && pnpm run lint && pnpm run check"
     }
   },
   "dependencies": {
@@ -86,8 +81,8 @@
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.158",
     "@types/rc-tooltip": "^3.7.1",
-    "@types/react-dom": "^17.0.2",
     "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.2",
     "@types/slate": "^0.47.9",
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -120,9 +115,9 @@
     "jest-haste-map": "^24.5.0",
     "jest-resolve": "^24.5.0",
     "jest-sonar-reporter": "^2.0.0",
-    "lerna": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "ora": "^4.0.2",
+    "pnpm": "^7.14.0",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^2.6.3",
     "syncpack": "^6.2.0",
