--- a/packages/bodiless-cli/package.json
+++ b/packages/bodiless-cli/package.json
@@ -31,10 +31,10 @@
   "scripts": {
     "bl": "./bin/bodiless",
     "build": "tsc --version && tsc -p ./tsconfig.json ",
-    "build:watch": "npm run build -- --watch",
+    "build:watch": "pnpm run build -- --watch",
     "new": "./bin/bodiless new",
     "postpack": "rimraf oclif.manifest.json",
-    "prepack": "rimraf lib && npm run build && oclif-dev manifest && oclif-dev readme",
+    "prepack": "rimraf lib && pnpm run build && oclif-dev manifest && oclif-dev readme",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
