--- a/packages/bodiless-webpack/package.json
+++ b/packages/bodiless-webpack/package.json
@@ -25,10 +25,10 @@
   "scripts": {
     "build": "run-p build:lib",
     "build:lib": "tsc -p ./tsconfig.json",
-    "build:watch": "npm run build:lib -- --watch",
+    "build:watch": "pnpm run build:lib -- --watch",
     "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\"",
-    "prepack": "npm run clean && npm run build"
+    "prepack": "pnpm run clean && pnpm run build"
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.21",
