--- a/packages/vital-content-listing/package.json
+++ b/packages/vital-content-listing/package.json
@@ -25,7 +25,7 @@
     "build": "run-p build:lib build:api-doc",
     "build:api-doc": "typedoc --out doc/api src",
     "build:lib": "tsc -p ./tsconfig.json",
-    "build:watch": "npm run build:lib -- --watch",
+    "build:watch": "pnpm run build:lib -- --watch",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
