--- a/sites/minimal-demo/package.json
+++ b/sites/minimal-demo/package.json
@@ -28,6 +28,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "gatsby": "^4.11.2",
+    "gatsby-plugin-pnpm": "^1.2.10",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -47,11 +48,12 @@
     "build:docs": "bl-docs-build",
     "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
-    "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
+    "build:stats": "BODILESS_BUILD_STATS=1 pnpm run build",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
     "dev-frontend": "gatsby develop",
+    "preinstall": "npx only-allow pnpm",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
     "prestart": "run-s build:env-vars build:docs",
     "serve": "gatsby serve",
