--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "gatsby": "^4.11.2",
     "gatsby-plugin-gatsby-cloud": "4.13.0",
+    "gatsby-plugin-pnpm": "^1.2.10",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -45,16 +46,16 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "gatsby build",
+    "build": "pnpm gatsby build",
     "build:docs": "bl-docs-build",
     "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
-    "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
+    "build:stats": "BODILESS_BUILD_STATS=1 pnpm run build",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
     "dev-frontend": "gatsby develop",
-    "prestart": "npm run build:docs",
+    "prestart": "pnpm run build:docs",
     "serve": "gatsby serve",
     "serve:docs": "docsify serve ./doc",
     "start": "run-p -r dev-frontend dev-backend"
