--- a/sites/__vital__/package.json
+++ b/sites/__vital__/package.json
@@ -42,6 +42,7 @@
     "express": "^4.17.1",
     "gatsby": "^4.11.2",
     "gatsby-plugin-canonical-urls": "^4.10.0",
+    "gatsby-plugin-pnpm": "^1.2.10",
     "gatsby-plugin-sitemap": "^5.10.2",
     "glob": "^7.1.6",
     "informed": "^3.34.0",
@@ -69,7 +70,7 @@
     "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
     "build:search": "create-search-index",
-    "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
+    "build:stats": "BODILESS_BUILD_STATS=1 pnpm run build",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
