--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -49,6 +49,7 @@
     "gatsby": "^4.11.2",
     "gatsby-plugin-canonical-urls": "^4.10.0",
     "gatsby-plugin-google-tagmanager": "^4.13.0",
+    "gatsby-plugin-pnpm": "^1.2.10",
     "gatsby-plugin-sitemap": "^5.10.2",
     "glob": "^7.1.6",
     "informed": "^3.34.0",
@@ -77,12 +78,13 @@
     "build:env-vars": "bodiless generate-env-vars",
     "build:lib": "bl-clear-logs && gatsby build && bl-validate-logs",
     "build:search": "create-search-index",
-    "build:stats": "BODILESS_BUILD_STATS=1 npm run build",
+    "build:stats": "BODILESS_BUILD_STATS=1 pnpm run build",
     "check": "tsc -p ./tsconfig.check.json",
     "clean": "gatsby clean",
     "dev-backend": "bodiless-backend",
     "dev-frontend": "gatsby develop",
     "docs": "run-s build:docs serve:docs",
+    "preinstall": "npx only-allow pnpm",
     "prepare": "node ../../scripts/set-missing-symlinks.js @bodiless",
     "prestart": "run-s build:env-vars build:docs",
     "serve": "gatsby serve",
